[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" # 错误处理
clap = "4.0.29" # 命令行解析
colored = "2" # 颜色
jsonxf = "1.1" # json格式化
mime = "0.3" # mime类型
reqwest = { version = "0.11", features = ["json"] } # http请求
tokio = { version = "1", features = ["full"] } # 异步 
